--- a/public/view/admin/post/create.html
+++ b/public/view/admin/post/create.html
@@ -11,23 +11,24 @@
 
         <div class="col-md-9">
             <div class="card">
-                <div class="card-header">
-                    <strong>{% if title %} {{ title }} - Microblog {% else %} Welcome to Microblog
-                                {% endif %}</strong>
-                    <small>Form</small>
-                </div>
+<!--                <div class="card-header">-->
+<!--                    <strong>{% if title %} {{ title }} - Microblog {% else %} Welcome to Microblog-->
+<!--                                {% endif %}</strong>-->
+<!--                    <small>Form</small>-->
+<!--                </div>-->
 
                 <div class="card-body">
-
                     <div class="form-group">
-                        <label for="PostTitle">İçerik Başlığı</label>
-                        <input class="form-control {{err.PostTitle_valid}}" id="PostTitle" name="PostTitle" value="{{post.PostTitle}}" type="text" placeholder="Site Başlığı"> {% if err.PostTitle_error %}
+                        <label for="PostTitle">{{locale.Get("Title")}}</label>
+                        <input class="form-control {{err.PostTitle_valid}}" id="PostTitle" name="PostTitle" value="{{post.PostTitle}}" type="text">
+                        {% if err.PostTitle_error %}
                         <div class="invalid-feedback" style="display:block">{{err.PostTitle}}</div>
                         {% endif %}
                     </div>
 
                     <div class="form-group">
-                        <label> Açıklama :</label> {% if err.PostContent_error %}
+                        <label>{{locale.Get("Content")}}</label>
+                        {% if err.PostContent_error %}
                         <div class="invalid-feedback" style="display:block">{{err.PostContent}}</div>
                         {% endif %}
                         <textarea id="PostContent" name="PostContent" class="form-control">{{post.PostContent}}</textarea> 
@@ -44,13 +45,12 @@
                 <div class="col-md-12">
                     <div class="card">
                         <div class="card-header">
-                            <strong>Kısa açıklama</strong>
+                            <strong>{{locale.Get("Excerpts")}}</strong>
                         </div>
-
                         <div class="card-body">
                             <div class="form-group">
-                                <label for="PostExcerpt">Kısa açıklama <span> *başlık metinlerde olan </span> </label>
-                                <textarea class="form-control {{err.PostExcerpt_valid}}" id="PostExcerpt" name="PostExcerpt" rows="9" placeholder="Kısa Açıklama...">{{ post.PostExcerpt }}</textarea>
+                                <label for="PostExcerpt"><small>{{locale.Get("Excerpts are optional hand-crafted summaries of your content")}}</small> </label>
+                                <textarea class="form-control {{err.PostExcerpt_valid}}" id="PostExcerpt" name="PostExcerpt" rows="9" >{{ post.PostExcerpt }}</textarea>
                             </div>
                         </div>
 
@@ -61,12 +61,12 @@
                 <div class="col-md-12">
                     <div class="card">
                         <div class="card-header">
-                            <strong>Kategori Bilgileri</strong>
+                            <strong>{{locale.Get("Category")}}</strong>
                         </div>
 
                         <div class="card-body">
                             <div class="form-group">
-                                <label> Seçiniz (mecburi değildir)</label>
+                                <label>{{locale.Get("Select (optional)")}}</label>
                                 <div>
                                     {% for cat in catsData%}
                                     <div class="form-check checkbox">
@@ -84,12 +84,12 @@
                 <div class="col-md-12">
                     <div class="card">
                         <div class="card-header">
-                            <strong>Dil Seçiniz</strong>
+                            <strong>{{locale.Get("Language Select")}}</strong>
                         </div>
 
                         <div class="card-body">
                             <div class="form-group">
-                                <label for="languageSelect">Dil seçiniz</label>
+                                <label for="languageSelect">{{locale.Get("Language Select")}}</label>
                                 <select class="form-control" name="languageSelect" id="languageSelect">
                                       <option value="tr">Türkçe</option>
                                       <option value="en">İngilizce</option>
@@ -102,7 +102,7 @@
                 <div class="col-md-12">
                     <div class="card">
                         <div class="card-header">
-                            <strong>Resim Bilgileri</strong>
+                            <strong>{{locale.Get("Photo Information")}}</strong>
                         </div>
 
                         <div class="card-body">
@@ -112,13 +112,13 @@
                             {% endif %}
                             <div class="col-md-4">
                                 <div id="alanOnizleme" style="display:none!important;">
-                                    <h5 class="text-center">Seçtiğiniz resim:</h5>
+                                    <h5 class="text-center">{{locale.Get("Selected Photo")}}</h5>
                                     <img id="resimOnizleme" src="" class="w-100" style="height:10rem!important;" />
                                 </div>
                             </div>
 
                             <div class="form-group">
-                                <label>Resim</label>
+                                <label>{{locale.Get("Photo")}}</label>
 
                                 <div class="input-group">
                                     <div class="custom-file">
@@ -127,7 +127,7 @@
                                     </div>
 
                                     <div class="input-group-append">
-                                        <span class="input-group-text" id="">Resim Seç</span>
+                                        <span class="input-group-text" id="">{{locale.Get("Photo Information")}}</span>
                                     </div>
 
                                     {% if err.picture_error %}
@@ -139,9 +139,8 @@
                         </div>
 
                         <div class="card-footer">
-
-                            <button class="btn btn-sm btn-primary" type="submit"> Kaydet</button>
-                            <button class="btn btn-sm btn-danger" type="reset"> VAZGEÇ</button>
+                            <button class="btn btn-sm btn-primary" type="submit"> {{locale.Get("Save")}}</button>
+                            <button class="btn btn-sm btn-danger" type="reset"> {{locale.Get("Cancel")}}</button>
                         </div>
                     </div>
                 </div>
