--- a/public/view/admin/roles/create.html
+++ b/public/view/admin/roles/create.html
@@ -11,22 +11,19 @@
     <div class="col-sm-12 col-xl-6 xl-100">
         <div class="card">
           <div class="card-header pb-0">
-            <h5>Tabs Vertical</h5>
+            <h5>{{locale.Get("Roles")}}</h5>
           </div>
           <div class="card-body">
 
             <div class="row">
-
                 <input name="_csrf" type="hidden" value="{{ csrf }}">
-
-
                 <div class="form-group">
-                  <label for="title">Enter Role Name</label>
+                  <label for="title"> {{locale.Get("Enter Role Name")}}</label>
                   <input class="form-control {{err.Title_valid}}" id="Title" name="Title" value="{{post.Title}}" type="text" placeholder="Enter Role Name"> 
                   {% if err.Title_error %}
                   <div class="invalid-feedback" style="display:block">{{err.Title}}</div>
                   {% endif %}
-              </div>
+                </div>
 
 
               <div class="col-sm-3 col-xs-12">
@@ -36,48 +33,40 @@
                     {% endfor %}
                 </div>
               </div>
-          
 
               <div class="col-sm-9 col-xs-12">
                 <div class="tab-content" id="v-pills-tabContent">
-                    {% for data in datas %}
+                {% for data in datas %}
                   <div class="tab-pane fade active  {% if  forloop.First  %} show {% endif %}" id="v-pills-{{data.ID }}" role="tabpanel" aria-labelledby="v-pills-{{data.ID }}-tab">
                       <table class="table">
                       <thead>
                         <tr>
-                          <th>Capability</th>
-                          <th >Grant</th>
-                          <th>Deny</th>
+                          <th>{{locale.Get("Capability")}}</th>
+                          <th>{{locale.Get("Grant")}}</th>
+                          <th>{{locale.Get("Deny")}}</th>
                         </tr>
                       </thead>
                       <tbody>
                           {% for per in data.Permissions %}
                           <tr>
                             <td> {{per.Title }} </td>
-                            <td> <input type="checkbox" class="click"  id="grant{{per.ID }}" name="grant-caps[]"  value="{{per.ID }}"> </td>
-                            <td><input type="checkbox" class="click" id="deny{{per.ID }}" name="deny-caps[]" checked value="{{per.ID }}"></td>
+                            <td> <input type="checkbox" class="click"  id="grant{{per.ID}}" name="grant-caps[]"  value="{{per.ID}}"> </td>
+                            <td><input type="checkbox" class="click" id="deny{{per.ID}}" name="deny-caps[]" checked value="{{per.ID}}"></td>
                           </tr>   
                            {% endfor %}
                       </tbody>
                       </table>
                   </div>
-              
                   {% endfor %}
                   <input type="submit">
                 </div>
               </div>
-          
-
-             
             </div>
-
           </div>
         </div>
       </div>
-
-    </form>
-
 </div>
+ </form>
 
 {% endblock %}
  {% block jsInline %}
