--- a/public/view/admin/roles/index.html
+++ b/public/view/admin/roles/index.html
@@ -8,17 +8,17 @@
 <div class="row">
     <div class="col-lg-12">
 
-        <a class="btn btn-block btn-primary" href="/admin/roles/create" data-bs-original-title="" title="">New Add</a>
+        <a class="btn btn-block btn-primary" href="/admin/roles/create" data-bs-original-title="" title="">{{locale.Get("New Add")}}</a>
         <div class="card">
-            <div class="card-header"><i class="fa fa-align-justify"></i> Post List</div>
+            <div class="card-header"><i class="fa fa-align-justify"></i> {{locale.Get("Roles List")}}</div>
             <div class="card-body">
                 <table class="table table-responsive-sm table-bordered">
                     <thead>
                         <tr>
-                            <th>Post</th>
-                            <th>Date registered</th>  
-                            <th>Status</th>
-                            <th>Action</th>
+                            <th>{{locale.Get("Role")}}</th>
+                            <th>{{locale.Get("Role")}}</th>
+                            <th>{{locale.Get("Role")}}</th>
+                            <th>{{locale.Get("Actions")}}</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -28,41 +28,43 @@
                             <td>  {{date.OnlyDate(data.CreatedAt.String())}}</td>
                             <td><span class="badge badge-success">
                                 {% if data.Status %}
-                                  Open
+                                    {{locale.Get("Open")}}
                                   {% else  %}
-                                  Close 
+                                    {{locale.Get("Close")}}
                                {% endif  %} 
                             </span></td>
-                            <td> <a class="btn btn-block btn-warning" href="/admin/roles/edit/{{data.ID}}">Edit</a>
-                                <a class="btn btn-block btn-danger" href="/admin/roles/delete/{{data.ID}}">Delete</a> 
+                            <td> <a class="btn btn-block btn-warning" href="/admin/roles/edit/{{data.ID}}">{{locale.Get("Edit")}}</a>
+                                <a class="btn btn-block btn-danger" href="/admin/roles/delete/{{data.ID}}">{{locale.Get("Delete")}}</a>
                             </td>
                         </tr>
                         {% endfor %}
                     </tbody>
                 </table>
                 <nav>
-                   {% if paginator.HasPages() %}
+                    {% if paginator.HasPages() %}
                     <ul class="pagination">
                         {%if paginator.HasPrev() %}
                         <li class="page-item">
-                            <a class="page-link" href="{{paginator.PageLinkFirst()}}">First</a>
+                            <a class="page-link" href="{{paginator.PageLinkFirst()}}">{{locale.Get("First")}}</a>
                         </li>
                         <li class="page-item">
                             <a class="page-link" href="{{paginator.PageLinkPrev()}}">&lt;</a>
                         </li>
                         {% else %}
-                        <li class="page-item disabled"><a class="page-link"> First</a></li>
+                        <li class="page-item disabled"><a class="page-link"> {{locale.Get("First")}}</a></li>
                         <li class="page-item disabled"><a class="page-link">&lt;</a></li>
                         {% endif %} {% for page in paginator.Pages%}
+
                         <li {% if paginator.IsActive(page) %} class="active page-item" {% endif %}>
                             <a class="page-link" href="{{ paginator.PageLink(page) }} ">{{page}}</a>
                         </li>
+
                         {% endfor %} {% if paginator.HasNext %}
                         <li class="page-item"><a class="page-link" href="{{paginator.PageLinkNext()}}">&gt; </a></li>
-                        <li class="page-item"><a class="page-link" href="{{paginator.PageLinkLast()}}">Last </a></li>
+                        <li class="page-item"><a class="page-link" href="{{paginator.PageLinkLast()}}">{{locale.Get("Last")}} </a></li>
                         {% else %}
                         <li class="disabled page-item"><a class="page-link">&gt;</a></li>
-                        <li class="disabled page-item"><a class="page-link">Last</a></li>
+                        <li class="disabled page-item"><a class="page-link">{{locale.Get("Last")}}</a></li>
                         {%endif%}
                     </ul>
                     {%endif%}
