--- a/public/view/admin/user/create.html
+++ b/public/view/admin/user/create.html
@@ -8,7 +8,8 @@
 <div class="row">
     <!-- alert -->
     <div class="col-md-12 flashMsg">
-        <div class="alert alert-success alert-dismissible fade show" role="alert"> {{flashMsg}}
+        <div class="alert alert-success alert-dismissible fade show" role="alert">
+            {{flashMsg}}
             <button class="close" type="button" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">×</span></button>
         </div>
     </div>
@@ -24,15 +25,15 @@
                 <div class="col-md-12">
                     <div class="card">
                         <div class="card-header">
-                            <strong> Add New User </strong>
-                            <small> Create a brand new user and add them to this site. </small>
+                            <strong> Add New User {{locale.Get("Create a brand new user and add them to this site.")}}</strong>
+                            <small>  </small>
                         </div>
                         <div class="card-body">
                             <div class="row">
                                 <div class="col-md-6">
 
                                     <div class="form-group">
-                                        <label for="UserNameNew"> Username</label>
+                                        <label for="UserNameNew">  {{locale.Get("Username")}}</label>
                                         <input class="form-control {{err.Username_valid}}" id="UserNameNew"
                                                name="UserNameNew"
                                                value="{{data.Username}}" type="text">
@@ -42,7 +43,7 @@
                                     </div>
 
                                     <div class="form-group">
-                                        <label for="EmailNew"> Email </label>
+                                        <label for="EmailNew">  {{locale.Get("Email")}} </label>
                                         <small class="red-color">*</small>
                                         <input class="form-control {{err.EmailNew_valid}}" id="EmailNew" name="EmailNew"
                                                value="{{data.Email}}" type="text">
@@ -54,7 +55,7 @@
 
 
                                     <div class="form-group">
-                                        <label for="Phone"> Phone </label>
+                                        <label for="Phone">  {{locale.Get("Phone")}}</label>
                                         <small class="red-color">*</small>
                                         <input class="form-control {{err.Phone_valid}}" id="Phone" name="Phone"
                                                value="{{data.Phone}}" type="text">
@@ -66,7 +67,7 @@
 
                                 <div class="col-md-6">
                                     <div class="form-group">
-                                        <label for="FirstName"> First Name </label>
+                                        <label for="FirstName">{{locale.Get("First Name")}}</label>
                                         <input class="form-control {{err.FirstName_valid}}" id="FirstName"
                                                name="FirstName" value="{{data.FirstName}}" type="text">
                                         {% if err.FirstName_error %}
@@ -75,7 +76,7 @@
                                     </div>
 
                                     <div class="form-group">
-                                        <label for="LastName"> Lastname </label>
+                                        <label for="LastName">  {{locale.Get("Lastname")}}</label>
                                         <input class="form-control {{err.LastName_valid}}" id="LastName" name="LastName"
                                                value="{{data.LastName}}" type="text">
                                         {% if err.LastName_error %}
@@ -97,22 +98,22 @@
                     <div class="card">
                         <div class="card-body">
                             <div class="form-group">
-                                <label for="PasswordNew">Password</label>
+                                <label for="PasswordNew"> {{locale.Get("Password")}}</label>
                                 <input class="form-control {{err.Password_valid}}" id="PasswordNew" name="PasswordNew"
                                        value="{{data.Password}}" type="Password" autocomplete="off">
                                 {% if err.Password_error %}
                                 <div class="invalid-feedback" style="display:block">{{err.Password}}</div>
                                 {% endif %}
-                                <button class="btn btn-danger btn-xs" onclick="genPasswordNew()" type="button">Generate
-                                    Password
+                                <button class="btn btn-danger btn-xs" onclick="genPasswordNew()" type="button">
+                                    Generate Password
                                 </button>
-                                <button class="btn btn-info btn-xs" onclick="ShowPasswordNew()" type="button">Show
-                                    Password
+                                <button class="btn btn-info btn-xs" onclick="ShowPasswordNew()" type="button">
+                                    Show Password
                                 </button>
                             </div>
 
                             <div class="form-group m-t-15 custom-radio-ml">
-                                <label>Roller</label>
+                                <label>{{locale.Get("Roles")}}</label>
                                 {% for role in roles %}
                                 <div class="radio radio-primary">
                                     <input id="radio{{role.ID }}" {%if role.ID== data.RoleID %} checked {% endif %}
@@ -120,14 +121,16 @@
                                     <label for="radio{{role.ID }}"><span class="digits"> {{role.Title }}</span></label>
                                 </div>
                                 {% endfor %}
+
                                 {% if err.RoleID_error %}
                                 <div class="invalid-feedback" style="display:block">{{err.RoleID}}</div>
                                 {% endif %}
-                                <a target="_blank" href="/admin/roles/">Daha fazla bilgi</a>
+
+                                <a target="_blank" href="/admin/roles/"> {{locale.Get("More information")}}</a>
                             </div>
 
                             <div class="card-footer">
-                                <button class="btn btn-sm btn-primary" type="submit"> Kaydet</button>
+                                <button class="btn btn-sm btn-primary" type="submit"> {{locale.Get("Save")}}</button>
                             </div>
 
                         </div>
